@@ -1,5 +1,17 @@
 2006-09-08 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/ext2.cc
+	  src/ext3.cc
+	  src/fat16.cc
+	  src/fat32.cc
+	  src/jfs.cc
+	  src/ntfs.cc
+	  src/reiser4.cc
+	  src/reiserfs.cc
+	  src/xfs.cc: be a bit more verbose on errior in set_used_sectors()
+
+2006-09-08 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/GParted_Core.h,
 	  src/GParted_Core.cc: declared char * buf global, so it can be
 	  initialized in copy_blocks(). This is a lot more efficient than
